2002-04-08  Chris Jackson <chris@fluffhouse.org.uk>

	* lilypond-indent.el: Bugfix of indentation of final point in buffer

2002-04-09  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: new command: LilyPond-un-comment-region.
	Added 2Midi to "Command"-menu. Inspired by latex.el and tex.el: 
	separate "Command"-menu and "LilyPond"-menu. Added "Miscellanous"-
	submenu to "LilyPond"-menu.

2002-04-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/script-stack-order.ly: new file.

2002-04-08  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION (MY_PATCH_LEVEL): Release 1.5.51.

	* mf/feta-din-code.mf: kerning for dynamics.

2002-04-07  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/dynamics-glyphs.ly: new file

	* mf/feta-din-code.mf: dynamic tweaks. New dynamic s.

	* mf/feta-nummer-code.mf: another bulb routine: mimic the bulb of
	forte f for the 2 number. Some fixes for the other bulbed glyphs.

	* Documentation/windows/gs-profile.sh:
	* Documentation/windows/gsview-profile.sh: Remove.  Functionality
	moved to gs/gsview windows packages.

2002-04-06  Mats Bengtsson  <matsb@matsb@s3.kth.se>

	* lily/stem-engraver.cc (acknowledge_grob): Revert to old way of
	finding out the duration. Fixes chord tremolo bug. 

	* lily/completion-note-heads-engraver.cc (process_music): Set
	correct duration for all requests of the broken notes.

	* input/regression/completion-heads.ly: Added example of
	Completion_heads_engraver.

	* lilypond-mode.el: Added "2Midi" command

2002-04-06  Chris Jackson <chris@fluffhouse.org.uk>

	* lily/tuplet-bracket.cc, scm/grob-description.scm: New
	edge-width, edge-height and shorten-pair properties for tuplet
	brackets.

	* lilypond-indent.el: Support for blinking of matching parentheses
	
	* lilypond-font-lock.el: Fix fontification of closing > on its own line
	
	* lily/piano-pedal-engraver.cc, lily/text-spanner.cc: Fixes and
	cleanups of piano pedal brackets.

2002-04-05  Han-Wen  <hanwen@cs.uu.nl>
